[package]
name = "noot"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple HTTP server"

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
